Layout of sidebar and content containers

--- a/assignments/twitch/RW-Twitch/src/styles/styles.scss
+++ b/assignments/twitch/RW-Twitch/src/styles/styles.scss
@@ -1,15 +1,19 @@
 #react-container {
-  display: block ;
-  justify-content: center;
-  margin-top: 0;
+  display: block;
+  margin: 0;
+}
 
+.page-sidebar {
   h1 { 
-    color: #696969;
+    color: #FFF;
     margin-top: 0;
-   }
-  .page-header {
-    background-color: #4b367c;
-    margin: 0;
-    width: 100%;
   }
+  background-color: #4b367c;
+  margin: 0;
+  height: 100vh;
+  grid-area: sidebar;
+}
+
+.content {
+  grid-area: content;
 }
