--- a/assignments/twitch/RW-Twitch/src/styles/styles.scss
+++ b/assignments/twitch/RW-Twitch/src/styles/styles.scss
@@ -8,12 +8,19 @@
     color: #FFF;
     margin-top: 0;
   }
-  background-color: #4b367c;
+  background-color: #6441A4;
   margin: 0;
   height: 100vh;
-  grid-area: sidebar;
 }
 
 .content {
-  grid-area: content;
+  background-color: gray;
+  height: 100vh;
+}
+
+.Logo {
+  width: 50%;
+  height: auto;
+  margin: 0 auto;
+  padding-top: 10px;
 }
