--- a/assignments/twitch/twitch_levi/src/styles/styles.scss
+++ b/assignments/twitch/twitch_levi/src/styles/styles.scss
@@ -12,13 +12,29 @@ body{
   width: 100%;
 }
 
-img {
-  max-height: 100%;
-  height: auto;
+#twitchLogo{
+  max-width: 60%;
+  padding-top:2%;
+  max-height: 10%;
+  margin: auto;
 }
 
-#twitchLogo{
-  width:20%;
+#userBox{
+  max-width: auto;
+  max-height: 10%;
+}
+
+#userPic{
+  width: 60px;
+  padding:5px;
+}
+
+#searchBox{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 8%;
+  margin: 1%;
 }
 
 .leftpane{
@@ -28,6 +44,36 @@ img {
   height: 100%;
   border-color: black;
   border-style: solid;
+  border-collapse: collapse;
   position: fixed;
   left: 0;
+}
+
+#userContent{
+  position: relative;
+  background: rgb(35, 38, 41);
+  height: 78%;
+}
+
+.textAlign{
+  text-align: center;
+}
+
+.rightpane{
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: auto;
+  background-color: black;
+}
+
+#arrowone{
+  position: relative;
+
+}
+#arrowtwo{
+  position: relative;
+}
+#arrowthree{
+  position: relative; 
 }
