--- a/assignments/twitch/twitch_levi/src/styles/styles.scss
+++ b/assignments/twitch/twitch_levi/src/styles/styles.scss
@@ -19,22 +19,28 @@ body{
   margin: auto;
 }
 
-#userBox{
+.userBox{
   max-width: auto;
   max-height: 10%;
 }
 
-#userPic{
+.userPic{
   width: 60px;
   padding:5px;
 }
 
 #searchBox{
-  position: absolute;
+  position: fixed;
+  min-width: 20%;
+  max-width: 20%;
   bottom: 0;
-  width: 100%;
-  height: 8%;
-  margin: 1%;
+  height: auto;
+  margin: auto;
+  padding: 1%;
+}
+
+.searchField{
+  width: 90%;
 }
 
 .leftpane{
@@ -52,7 +58,7 @@ body{
 #userContent{
   position: relative;
   background: rgb(35, 38, 41);
-  height: 78%;
+  height: 100%;
 }
 
 .textAlign{
@@ -76,4 +82,23 @@ body{
 }
 #arrowthree{
   position: relative; 
+}
+
+#middlePane{
+  position: absolute;
+  background-color: #6441A4;
+  min-height: 100%;
+  min-width: 80%;
+  //Terrible idea change this later
+  margin: 0 0.45%;
+  padding: 1%;
+  // padding-left: 20%;
+}
+
+.game{
+  display: inline-block;
+  width: 20%;
+  height: 20%;
+  margin: auto;
+  color: gray;
 }
