--- a/assignments/twitch/EthanRhodes_Twitch/src/styles/styles.scss
+++ b/assignments/twitch/EthanRhodes_Twitch/src/styles/styles.scss
@@ -32,6 +32,13 @@
           top: 0;
           width: 45%;
       }
+
+      .propic
+      {
+          position: relative;
+          top: 0;
+          width: 15%;
+      }
     
       .topleft
       {
