--- a/assignments/twitch/twitch-sean/src/styles/styles.scss
+++ b/assignments/twitch/twitch-sean/src/styles/styles.scss
@@ -7,8 +7,8 @@
 
 .sidenav{
    height:100%;
-   width: 25%;
-   position: fixed;
+   
+  //  position: fixed;
    z-index: 1;
    top:0;
    left:0;
@@ -23,15 +23,19 @@
 
     .top{
       background-color: #b9b0b0;
-      height: 20%;
+      height: 8%;
     }
+
     .media{
       position: absolute; top: 70px; left:20px;
     }
-
+    .bottom{
+      top: 50%;
+      left: 5%;
+    }
     .searchBar {
-      position:absolute;
-      left:10%;
+      position:fixed;
+      left:1%;
       top:95%;
       .searchField{
         position:absolute;
@@ -48,9 +52,7 @@
     }
 }
 
-#gamesDiv {
-   padding-left: 400px;
-}
+
 .row{
   padding: 3px;
   display: -webkit-box;
@@ -82,7 +84,7 @@
 
 #gameBox{
       height: 250px;
-      float: left;
+     
 }
 
 
