--- a/assignments/twitch/twitch_brady/src/styles/styles.scss
+++ b/assignments/twitch/twitch_brady/src/styles/styles.scss
@@ -1,25 +1,32 @@
-#react-container {
-  display:flex;
-  justify-content: center;
-
-  h1 { color: #696969; }
-
-}
-
 .twitchLogo{
   width: 50%;
   height: 50%;
 }
 .twitchIcon{
-  width: 15%;
-  height: 15%;
+  width: 20%;
+  height: 20%;
+  padding-left: 15px;
 }
 
 .leftPanel{
-  background-color: #696969;
-  width: 25%;
+  background-color: #60635b;
+  size: 100%;
   height: 100%;
+  width: 20%;
+  position: fixed;
+  left: 0;
 }
-html{
-background-color: purple;
+
+.mainPanel{
+  background-color: purple;
+  size: 100%;
+  height: 100%;
+  width: 80%;
+  position: fixed;
+  right: 0;
+}
+
+.grayBox{
+  background-color: #808080;
+  top: 0;
 }
