--- a/assignments/twitch/twitch_leviV2/src/styles/styles.scss
+++ b/assignments/twitch/twitch_leviV2/src/styles/styles.scss
@@ -36,7 +36,7 @@ nav{
         text-decoration: none;
       }
       a:hover{
-        color: purple;
+        color: black;
         text-decoration: none;
       }
 
@@ -62,7 +62,7 @@ nav{
 
 
 .LeftSideBar{
-  height: 100%;
+  height: 937px;
   width: 15%;
   background-color: #17141f;
   position: fixed;
@@ -95,8 +95,8 @@ nav{
 .Content{
   margin-top: 50px;
   margin-left: 15%;
-  border-left: 1px solid rgb(218, 216, 222)
-  ;
+  border-left: 1px solid rgb(218, 216, 222);
+  
 }
 
 .GameContainer{
@@ -105,9 +105,10 @@ nav{
   flex-wrap: wrap;
   align-items: flex-start;
   padding: 2%;
+  justify-content: space-around;
   //I think this is bad css, but setting the hieght like this
   //Allows for the scolling to happen
-  height: 90vh;
+  height: 95vh;
   overflow-y: auto;
 
   // For Flexbox truncating text = https://css-tricks.com/flexbox-truncated-text/
@@ -116,9 +117,25 @@ nav{
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    min-width: 21%;
+    min-width: 20%;
     padding: 0 3%;
+    max-width: 20%;
   }
+}
+
+.MoreOrLessContainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: flex-start
+
+  h6{
+    flex:1;
+  }
+}
+
+.ShowMore{
+  margin-left:auto;
 }
 
 .hideText{
@@ -140,3 +157,5 @@ nav{
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
+
+
