--- a/assignments/twitch/twitch_leviV2/src/styles/styles.scss
+++ b/assignments/twitch/twitch_leviV2/src/styles/styles.scss
@@ -15,8 +15,8 @@ nav{
   height: 50px;
 
   ul{
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     flex-flow: row;
@@ -27,9 +27,11 @@ nav{
     padding: 0;
 
     li{
+      min-width: 70px;
       padding: 0 1%;
-      
+      width: auto;
       a{
+
         color: white;
         text-decoration: none;
       }
@@ -40,7 +42,7 @@ nav{
 
       img{
         display: inline;
-        
+
       }
       h5{
         padding-left: 8px;
@@ -51,6 +53,10 @@ nav{
     li:last-child{
       margin-left: auto;
     }
+
+    li:first-child{
+      padding: 0;
+    }
   }
 
   img{
@@ -60,21 +66,21 @@ nav{
 
 
 .LeftSideBar{
-  height: 95vh;
+  height: 90.5vh;
   background-color: #17141f;
   flex: 1;
   position: relative;
 
   div{
     padding: 0 8%;
-    
+
     hr{
       margin: 0;
     }
-  
+
     div{
       padding: 0;
-      
+
 
       img{
         float: left;
@@ -154,7 +160,7 @@ nav{
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   input{
     background-color: #17141f;
   }
@@ -185,7 +191,5 @@ nav{
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
-
-
