--- a/assignments/twitch/twitch_leviV2/src/styles/styles.scss
+++ b/assignments/twitch/twitch_leviV2/src/styles/styles.scss
@@ -10,9 +10,9 @@ html body{
 
 nav{
   width: 100%;
-  padding: 0 1%;
+  // padding: 0 1%;
   background-color: #6441A4;
-  height: 50px;
+  height: 8vh;
 
   ul{
     width: 100%;
@@ -66,7 +66,7 @@ nav{
 
 
 .LeftSideBar{
-  height: 90.5vh;
+  height: 92vh;
   background-color: #17141f;
   flex: 1;
   position: relative;
@@ -109,7 +109,7 @@ nav{
   justify-content: space-around;
   //I think this is bad css, but setting the hieght like this
   //Allows for the scolling to happen
-  height: 95vh;
+  height: 92vh;
   overflow-y: auto;
 
   // For Flexbox truncating text = https://css-tricks.com/flexbox-truncated-text/
@@ -150,11 +150,12 @@ nav{
 }
 
 .LeftPaneFormBox{
+  padding: 0;
   width: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 5%;
+  height: 10%;
   background-color: #17141f;
   border-top: 1px solid rgb(218, 216, 222);
   display: flex;
@@ -168,7 +169,7 @@ nav{
 
 .UserContentContainer{
   overflow: auto;
-  height: 95%;
+  height: 90%;
   width: 100%;
   padding: 0 8%;
 
