--- a/assignments/twitch/twitch_leviV2/src/styles/styles.scss
+++ b/assignments/twitch/twitch_leviV2/src/styles/styles.scss
@@ -31,12 +31,25 @@ nav{
       margin: auto 1%;
       width: auto;
       a{
-
-        color: white;
+        color: #9d9d9d;
         text-decoration: none;
       }
+
+      a:visited{
+        text-decoration: none;
+        color:#9d9d9d;
+      }
+      a:active{
+        text-decoration: none;
+        color:#FFF;
+      }
+      a:link{
+        color:#FFF;
+        text-decoration: none;
+      }
+
       a:hover{
-        color: black;
+        color: #FFF;
         text-decoration: none;
       }
 
@@ -182,6 +195,8 @@ nav{
   display: flex;
   align-items: center;
   height: 100%;
+  transition: border-bottom .2s;
+
 
   a{
     flex:1
