--- a/assignments/twitch/EthanRhodes_Twitch/src/styles/styles.scss
+++ b/assignments/twitch/EthanRhodes_Twitch/src/styles/styles.scss
@@ -42,6 +42,18 @@
             height: 49%;
           }
       }
+
+      .proname
+      {
+          position: relative;
+          .profileName
+          {
+            float: right;
+            width: 10%;
+            bottom: 0;
+            height: 49%;
+          }
+      }
     
       .topleft
       {
