--- a/assignments/twitch/RW-Twitch/src/styles/styles.scss
+++ b/assignments/twitch/RW-Twitch/src/styles/styles.scss
@@ -20,6 +20,11 @@
     color: #FFF;
     margin-top: 0 !important;
   }
+  iframe {
+    margin-top: 6vw;
+    margin-bottom: 6vw;
+    margin-left: 10vw;
+  }
   padding-top: 2vh;
   background-color: gray;
   top: 0;
@@ -49,6 +54,7 @@
   margin-left: 1vw;
   background-color: #FFF;
   border-radius: 15px 15px 0 0;
+  cursor: pointer;
   img{
     border-radius: 15px 15px 0 0;
     width: 100%;
