--- a/assignments/twitch/EthanRhodes_Twitch/src/styles/styles.scss
+++ b/assignments/twitch/EthanRhodes_Twitch/src/styles/styles.scss
@@ -45,7 +45,7 @@
 
       .proname
       {
-          position: relative;
+          position: absolute;
           .profileName
           {
             float: right;
@@ -94,10 +94,33 @@
   }
 
 
+  .games
+  {
+      margin: 10px;
+      padding: 20px;
+      font-size: 30px;
+      width: 250px;
+      white-space: nowrap;
+      overflow: hidden;
+      .h4
+      {
+        text-overflow: ellipsis;
+      }
+
+  }
+  
+
 
   .mid
   {
       text-align: center;
+  }
+
+  .gamesList {
+    padding-left: 15%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 
 }
