--- a/assignments/twitch/twitch_brady/src/styles/styles.scss
+++ b/assignments/twitch/twitch_brady/src/styles/styles.scss
@@ -100,3 +100,49 @@
   color: #808080;
   text-align: center;
 }
+
+.dropbtn {
+  background-color: #6408a8;
+  color: #b8b5c0;
+  font-size: 16px;
+  border-color: #6408a8;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #60635b;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #b8b5c0;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #60635b
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #6408a8;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
